--- a/my-next-site/.gitignore
+++ b/my-next-site/.gitignore
@@ -1,4 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
 
 # dependencies
 /node_modules
